@@ -27,6 +27,9 @@ Changes in Bitbake 1.9.x:
 	- Stop generating the A variable (seems to be legacy code)
 	- Make sure intertask depends get processed correcting in recursive depends
 	- Add pn-PN to overrides when evaluating PREFERRED_VERSION
+	- Improve the progress indicator by skipping tasks that have 
+	  already run before starting the build rather than during it
+
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
